hover effect added

--- a/index.html
+++ b/index.html
@@ -244,6 +244,24 @@
       EXOU Holdings Pty LTD
     </p>
   </footer>
+  <script>
+    //portfolio hover effect
+    $(document).ready(function() {
+      $('.card').hover(
+        function() {
+          $(this).animate({
+            marginTop: "-=1%",
+          }, 200);
+        },
+        //hover out of portfolio
+        function() {
+          $(this).animate({
+            marginTop: "0%",
+          }, 200);
+        }
+      )
+    });
+  </script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
