--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
   <!-- Top Navigation -->
   <header>
-    <nav class="navbar navbar-expand-md navbar-light ">
+    <nav class="navbar navbar-expand-md navbar-light " id="navbar">
       <div class="container d-flex justify-content-between">
         <a class="navbar-brand" href="#">
           <img src="assets\exoulogogear.png" width="30" height="30" alt="">
@@ -262,6 +262,7 @@
       )
     });
   </script>
+    <script src="script.js"></script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
