--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <div class="container d-flex justify-content-between">
         <a class="navbar-brand" href="#">
           <img src="assets\exoulogogear.png" width="30" height="30" alt="">
+            <span>EXOU</span>
         </a>
         <!--<a class="navbar-brand" href="#">IVM</a>-->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
