--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ml-auto">
-            <a class="nav-item nav-link" href="#aboutMe">Home</a>
-            <a class="nav-item nav-link" href="#skills">About</a>
+            <a class="nav-item nav-link" href="#navbar">Home</a>
+            <a class="nav-item nav-link" href="#services">Services</a>
+            <a class="nav-item nav-link" href="#aboutexou">About</a>
             <a class="nav-item nav-link" href="#portfolio">Our Work</a>
-            <a class="nav-item nav-link" href="#">Clients</a>
             <a class="nav-item nav-link" href="#contactSection">Contact Us</a>
           </div>
         </div>
@@ -87,18 +87,19 @@
           <img src="assets\icon1.png" alt="Engineering" />
           <h4>Engineering & Design</h4>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas maximus, nisl eget tempus pharetra, leo nisl lacinia nisi, vel commodo eros lorem ac elit. Sed vulputate dui a eleifend suscipit. Pellentesque commodo magna at elementum
-            hendrerit. Etiam velit ex, facilisis vitae malesuada at, dapibus quis metus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Ut nec diam risus. Aliquam tincidunt arcu orci, ac hendrerit mi hendrerit non. Nam eget dolor ac
-            diam dapibus posuere.
+            Our CAD software helps us explore ideas, visualize concepts through photorealistic renderings and simulations to give the clients a accurate idea of what the final product will look like.
           </p>
         </div>
         <div class="col-md-4">
           <img src="assets\cncicon.png" alt="CNC" />
           <h4>CNC</h4>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas maximus, nisl eget tempus pharetra, leo nisl lacinia nisi, vel commodo eros lorem ac elit. Sed vulputate dui a eleifend suscipit. Pellentesque commodo magna at elementum
-            hendrerit. Etiam velit ex, facilisis vitae malesuada at, dapibus quis metus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Ut nec diam risus. Aliquam tincidunt arcu orci, ac hendrerit mi hendrerit non. Nam eget dolor ac
-            diam dapibus posuere.
+            <strong>CNC milling</strong>, our milling capacity is up to 1650 mm long x 850 mm wide x 900 mm high.<br /><br />
+<strong>CNC lathe</strong>, our turning capacity is up to 1100 mm in diameter by 3450 mm long.<br /><br />
+<strong>CNC Laser</strong>, our capacity is 4,1 meters by 2,1 meters and can cut up to  20 mm thick.<br /><br />
+<strong>Plasma Cutting</strong>, our capacity is 3,0 meters by 1,5 meters and can cut up to  50 mm thick. Also includes a tube cutting attachment. Ø50 – Ø400mm (max = 6mtrs)<br /><br />
+<strong>CNC Press brake</strong>, we can bend up to         3 metres long and 16 mm thick.
+
           </p>
         </div>
         <div class="col-md-4">
@@ -216,22 +217,24 @@
     <div class="container">
       <div class="row">
         <div class="col-md-3">
-          <h5>About</h5>
+          <h5>Partners</h5>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas maximus, nisl eget tempus pharetra, leo nisl lacinia nisi, vel commodo eros lorem ac elit. Sed vulputate dui a eleifend suscipit. Pellentesque commodo magna at elementum
-            hendrerit. Etiam velit ex, facilisis vitae malesuada at, dapibus quis metus.
+            Coming Soon..
           </p>
         </div>
         <div class="col-md-3">
           <h5>Latest Projects</h5>
+          <p>
+            Coming Soon..
+          </p>
         </div>
         <div class="col-md-3">
           <h5>Contact Info</h5>
 
           <p>
-            083 973 3655
+            083 259 6450
             <br />
-            <a href="mailto:ivanv257@gmail.com">ivanv257@gmail.com</a>
+            <a href="mailto:ivanv257@gmail.com">exouholdings@gmail.com</a>
             <br />
             www.exouholdings.co.za
           </p>
