--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ml-auto">
-            <a class="nav-item nav-link" href="#navbar">Home</a>
+            <a class="nav-item nav-link" href="#carouselExampleFade">Home</a>
             <a class="nav-item nav-link" href="#services">Services</a>
-            <a class="nav-item nav-link" href="#aboutexou">About</a>
-            <a class="nav-item nav-link" href="#portfolio">Our Work</a>
-            <a class="nav-item nav-link" href="#contactSection">Contact Us</a>
+            <a class="nav-item nav-link" href="#about">About</a>
+            <a class="nav-item nav-link" href="#ourwork">Our Work</a>
+            <a class="nav-item nav-link" href="#contact">Contact Us</a>
           </div>
         </div>
       </div>
@@ -80,7 +80,7 @@
     </div>
   </section>
 
-  <section class="services">
+  <section class="services" id="services">
     <div class="container">
       <div class="row">
         <div class="col-md-4">
@@ -115,7 +115,7 @@
     </div>
     </div>
   </section>
-  <section class="aboutus">
+  <section class="aboutus" id="about">
     <div class="container">
 
       <h3>About Exou Holdings</h3>
@@ -139,7 +139,7 @@
     </div>
   </section>
 
-  <section class="ourwork">
+  <section class="ourwork" id="ourwork">
     <div class="container">
       <h3>Our Work</h3>
       <div class="row">
@@ -147,7 +147,7 @@
           <div class="card mb-4 shadow-sm">
             <img class="card-img-top" src="assets\work1.jpg" alt="Branding">
             <div class="card-body">
-              <p class="card-text">Machine</p>
+              <p class="card-text">Transportation | Rails equipment and parts</p>
             </div>
           </div>
         </div>
@@ -155,7 +155,7 @@
           <div class="card mb-4 shadow-sm">
             <img class="card-img-top" src="assets\work2.jpg" alt="Website">
             <div class="card-body">
-              <p class="card-text">Machine</p>
+              <p class="card-text">Earthmoving: Vehicles Equipment & Spareparts</p>
             </div>
           </div>
         </div>
@@ -163,7 +163,7 @@
           <div class="card mb-4 shadow-sm">
             <img class="card-img-top" src="assets\work3.jpg" alt="Logo">
             <div class="card-body">
-              <p class="card-text">Machine</p>
+              <p class="card-text">Mining:<br />Parts & Equipment</p>
             </div>
           </div>
         </div>
@@ -171,7 +171,7 @@
           <div class="card mb-4 shadow-sm">
             <img class="card-img-top" src="assets\work4.jpg" alt="Logo">
             <div class="card-body">
-              <p class="card-text">Machine</p>
+              <p class="card-text">CNC: <br />Machines</p>
             </div>
           </div>
         </div>
@@ -181,7 +181,7 @@
           <div class="card mb-4 shadow-sm">
             <img class="card-img-top" src="assets\work5.jpg" alt="Branding">
             <div class="card-body">
-              <p class="card-text">Machine</p>
+              <p class="card-text">CNC: <br /> Machines</p>
             </div>
           </div>
         </div>
@@ -189,7 +189,7 @@
           <div class="card mb-4 shadow-sm">
             <img class="card-img-top" src="assets\work6.jpg" alt="Website">
             <div class="card-body">
-              <p class="card-text">Machine</p>
+              <p class="card-text">Welding: <br  />Welded Parts</p>
             </div>
           </div>
         </div>
@@ -197,7 +197,7 @@
           <div class="card mb-4 shadow-sm">
             <img class="card-img-top" src="assets\work7.jpg" alt="Logo">
             <div class="card-body">
-              <p class="card-text">Machine</p>
+              <p class="card-text">Sheetmetal and Fabricated Parts</p>
             </div>
           </div>
         </div>
@@ -205,7 +205,7 @@
           <div class="card mb-4 shadow-sm">
             <img class="card-img-top" src="assets\work8.jpg" alt="Logo">
             <div class="card-body">
-              <p class="card-text">Machine</p>
+              <p class="card-text">Earthmoving Vehicles Equipment & Spareparts</p>
             </div>
           </div>
         </div>
@@ -213,7 +213,7 @@
     </div>
   </section>
 
-  <section class="prefooter">
+  <section class="prefooter" id="contact">
     <div class="container">
       <div class="row">
         <div class="col-md-3">
