--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100" src="assets\slide1.jpg" alt="First slide">
+          <img class="d-block w-100" src="assets\bulldozer.jpg" alt="First slide">
           <div class="carousel-caption">
             <!--<h2 class="h2-responsive">Insert Text</h2>
             <p>Third text</p> -->
